lit review; keywords

--- a/draft.tex
+++ b/draft.tex
@@ -60,14 +60,14 @@ bookmarksopen=true]{hyperref}
 \date{\vskip-.1in \today}
 \maketitle
 
-%\begin{center} {\bf Abstract} \end{center}
+\begin{center} {\bf Abstract} \end{center}
 
-%\begin{quote}
-%{\small This paper 
+\begin{quote}
+{This paper 
 
-%\textit{JEL classification:} D72, D80 \\
-%\textit{Keywords:} lobbying, political economy, legislatures, uncertainty}
-%\end{quote}
+\textit{JEL classification:} D72, D80, C72 \\
+\textit{Keywords:} lobbying, political economy, legislatures, uncertainty}
+\end{quote}
 
 \bigskip
 \section{Introduction}
@@ -82,11 +82,11 @@ bookmarksopen=true]{hyperref}
 \subsection{Related Literature}
 \label{sec:lit}
 
-\textcolor{blue}{Related is Le Breton and Salanie (2003), which studies lobbying when the lobby is uncertain about the preferences of a unitary decision maker. Le Breton and Zaporozhets (2007) go a step further and replace the unitary decision maker with a legislature with multiple actors. Song (2008) is a model of endogenous lobbying with a ratification constraint in a context of unilateral policy making with no uncertainty, and Coates and Ludema (2001) study trade policy leadership in a model with endogenous lobbying in the presence of political uncertainty with imperfect monitoring.}
+This work relates to the literature on vote-buying and legislative behavior in political science (Groseclose and Snyder (1996), Dekel et. al. (2005), Dal Bo (2007)) as well as to the canonical studies on endogenous regulation (cf. Stigler (1975), Peltzman (1976), Becker (1983), Laffont and Tirole (1994)).
 
-\textcolor{blue}{As noted above, Saiegh (2009) argues that the uncertainty surrounding statutory lawmaking is in part related to governmental and political structure. Although they do not discuss uncertainty specifically, the cross-country empirical work of Gawande, Krishna and Olarreaga (2009) is the first to our knowledge that suggests that this kind of uncertainty plays a role in trade policy. They show that variables such as the number of checks and balances on the power of the legislature and the gap between the policy positions of the main political parties have predictive power for the PFS ``welfare-mindedness'' parameter. One of the objectives of this proposed project is to directly test the premise that legislative uncertainty indeed has an important impact on trade policy.}
-			
-\textcolor{blue}{This work also relates to the canonical studies on endogenous regulation (cf. Stigler (1975), Peltzman (1976), Becker (1983), Laffont and Tirole (1994)), as well as the literature on vote-buying and legislative behavior in political science (Groseclose and Snyder (1996), Dekel et. al. (2005), Dal Bo (2007)).}
+Also related is Le Breton and Salanie (2003), which studies lobbying when the lobby is uncertain about the preferences of a unitary decision maker. Le Breton and Zaporozhets (2007) go a step further and replace the unitary decision maker with a legislature with multiple actors. Song (2008) is a model of endogenous lobbying with a ratification constraint in a context of unilateral policy making with no uncertainty, and Coates and Ludema (2001) study trade policy leadership in a model with endogenous lobbying in the presence of political uncertainty with imperfect monitoring.
+
+As noted above, Saiegh (2009) argues that the uncertainty surrounding statutory lawmaking is in part related to governmental and political structure. Although they do not discuss uncertainty specifically, the cross-country empirical work of Gawande, Krishna and Olarreaga (2009) is the first to our knowledge that suggests that this kind of uncertainty plays a role in trade policy. They show that variables such as the number of checks and balances on the power of the legislature and the gap between the policy positions of the main political parties have predictive power for the PFS ``welfare-mindedness'' parameter. The model of Buzard (2016) indicates that the kind of political uncertainty modeled here can have an important impact on the formation and maintenance of trade agreements.
 
 %I will begin by ... Section~\ref{sec:main} then ... In Section~ \ref{sec:example}, ... Section~\ref{sec:dis} explores .... Several extensions of the model are explored in Section~\ref{sec:ext} and Section~\ref{sec:concl} concludes.
 
@@ -469,7 +469,7 @@ In this case where the non-negativity constraint binds for the variable associat
 The second order conditions imply that both $X$ and $Y$ are positive, thus it must be that $X = Y > 0$. Note that once this is known, one can go back to, for instance, Equations~\ref{eq:base} and substitute for one of the variables. Given that $Z=0$, with a particular value of $\left(\alpha,W_B\right)$, the solution gives the values of the two relevant bribes. $\hfill\blacksquare$
 
 \vskip.3in
-\noindent \textbf{\hypertarget{Pr_1NNB}{Proof of Proposition~\ref{prop:3NNB}}}:
+\noindent \textbf{\hypertarget{Pr_3NNB}{Proof of Proposition~\ref{prop:3NNB}}}:
 	
 From the first order conditions, when $X$ and $Y$ are non-negative, it can be shown that the same set of inequalities as in the proof of Proposition~\ref{prop:2NNB} hold.
 
@@ -510,7 +510,7 @@ When Vote Buyer B bribes just one legislator, two non-negativity constraints are
 \item Bombardini, M., and F. Trebbi (2012): ``Competition and Political Organization: Together or Alone in Lobbying for Trade Policy?'' {\em Journal of International Economics}, 87, 18-26.
 
 \begin{sloppypar}	
-	\item Buzard, K., 2014c. Trade Agreements in the Shadow of Lobbying. Available at: \url{https://kbuzard.expressions.syr.edu/wp-content/uploads/TradeAgreements_Shadow_Lobbying.pdf}.
+	\item Buzard, K., 2016. Trade Agreements in the Shadow of Lobbying. Available at: \url{http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2168522}.
 \end{sloppypar}
 
 \item Clinton, J., Jackman, S., and D. Rivers, (2004): ``The Statistical Analysis of Roll Call Data.'' {\em American Political Science Review}, 98, 355-370.
