--- a/draft.tex
+++ b/draft.tex
@@ -63,7 +63,7 @@ bookmarksopen=true]{hyperref}
 \begin{center} {\bf Abstract} \end{center}
 
 \begin{quote}
-{This paper 
+{This paper seeks to understand how uncertainty affects the incentives for lobbying and the associated prospects for the passage of legislation. We introduce a model of vote buying in which there is uncertainty about the ideological positions of legislators with information about this uncertainty symmetric among all players. When legislators' voting behavior cannot be perfectly anticipated in this manner, the model is able to describe various realistic aspects of lobbying and voting behavior. For example, it predicts that lobbyists on both sides of an issue may be active at the same time, that moderate legislators and those about which there is average uncertainty receive more bribes than those that are ideologically extreme, and that ideal points gross of bribes need not be equalized. Estimating ideal points using a logistic item response model, we find support for these predictions in U.S. House of Representatives roll call data.
 
 \textit{JEL classification:} D72, D80, C72 \\
 \textit{Keywords:} lobbying, political economy, legislatures, uncertainty}
