--- a/draft.tex
+++ b/draft.tex
@@ -77,17 +77,17 @@ In democratic countries, legislatures are the authoritative source of statutory 
 
 We solve a model of vote buying in which there is uncertainty about the ideological positions of legislators with information about this uncertainty symmetric among all players. This model is able to describe some realistic aspects of lobbying and voting behavior: for instance, it predicts that lobbyists on both sides of an issue may be active at the same time, that moderate legislators and those about which there is average uncertainty receive more bribes than those that are ideologically extreme, and that ideal points gross of bribes need not be equalized. We find support for these predictions in U.S. House of Representatives roll call data, from which we estimate ideal points using a logistic item response model.
 
-In constructing the model, we follow Groseclose and Snyder (1996) and Banks (2000) in taking a policy proposal as given and studing the behavior of interest groups who may lobby legislators in an attempt to sway the outcome of the vote. In order to keep the model tractable, we study a three-person legislature in which two lobbyists---one for the new proposal and one against it---sequentially offer payments to the legislators.
+In constructing the model, we follow Groseclose and Snyder (1996) and Banks (2000) in taking a policy proposal as given and studying the behavior of interest groups who may lobby legislators in an attempt to sway the outcome of the vote. In order to keep the model tractable, we study a three-person legislature in which two lobbyists---one for the new proposal and one against it---sequentially offer payments to the legislators.
 
-A payment to a legislator has the effect of shifting the legislator's ideal point, which we take to be known up to the mean and variance parameter of a given probability distribution. Thus bribing a legislator has the effect of changing the probability with which the legislator votes in the manner the vote buyer prefers. In this environment, the optimal vote-buying strategies are not immediately obvious.
+A payment to a legislator has the effect of shifting the legislator's ideal point, which we take to be known up to the mean and variance parameters of a given probability distribution. Thus bribing a legislator has the effect of changing the probability with which the legislator votes in the manner the vote buyer prefers. In this environment, the optimal vote-buying strategies are not immediately obvious.
 
 We find that the number of legislators a vote buyer chooses to lobby is increasing in the value he places on the policy. When a vote buyer's willingness-to-pay for his preferred policy is very low, he will bribe none of the legislators; if it is very high, he will bribe all of them. Buying one or two votes is also possible.
 
-Perhaps more interesting, and in contrast to results in a model without uncertainty, when only one or two legislators are bribed the legislator who remains unbribed is often he who is most ideologically-aligned with the vote buyer. When the legislators are roughly unbiased on average, it is the moderate legislator who is bribed first. This corresponds well with the data that shows that more moderate legislators receive more campaign contributions.
+Perhaps more interesting, and in contrast to results in a model without uncertainty, when only one or two legislators are bribed the legislator who remains unbribed is often the one who is most ideologically-aligned with the vote buyer. When the legislators are roughly unbiased on average, it is the moderate legislator who is bribed first. This corresponds well with the data that shows that more moderate legislators receive more campaign contributions.
 
 If uncertainty is taken to be the same for the ideal points of all the legislators, we find that the vote buyers use `leveling strategies' as in Groseclose and Snyder (1996) and Banks (2000). Allowing for asymmetric levels of uncertainty, on the other hand, provides a more realistic picture that accords well with our empirical findings that legislators with moderate levels of uncertainty are the target of the highest levels of lobbying, while those about whom there are very high levels of uncertainty most often remain unbribed.
 
-A final result we find that is appealing from an empirical point of view: in this model, it is possible to have both vote buyers paying positive bribes on the same issue. Because the results of the model accord well with these important patterns in the data, we believe this model will contribute to the understanding of the political uncertainty that surrounds statutory lawmaking.
+We find one more result that is appealing from an empirical point of view. In this model, it is possible to have both vote buyers paying positive bribes on the same issue. Because the results of the model accord well with these important patterns in the data, we believe this model will contribute to the understanding of the political uncertainty that surrounds statutory lawmaking.
 
 Below we introduce an innovative methodology for quantifying cross-industry political uncertainty; the model under consideration here is being adapted as a means to properly identify political uncertainty in this context. We plan to establish the relevance of the resulting measures for policy-making and will make the data available for future use in a wide range of applications.
 
