--- a/draft.tex
+++ b/draft.tex
@@ -222,7 +222,7 @@ Now, how does the probability that the legislator at $-0.5$ (the one who is most
 
 
 
-\section{Some Theoretical Results}
+\section{Theoretical Results}
 \label{sec:res}
 
 Although uncertainty is present in the environment under consideration here, information about that uncertainty is symmetric. Therefore the appropriate equilibrium notion is subgame perfect Nash equilibrium.
@@ -248,24 +248,15 @@ The first part of this result is similar in spirit to Groseclose and Snyder (199
 	\label{prop:3NNB}
 \end{proposition}
 
-This has the feel of Groseclose and Snyder (1996) and Banks (2000) but the logic is different. There, gross ideal points are equalized so that there is no wasted effort, as the second mover would ignore whichever voter was most expensive to him. Remember that this result is in the context of only one vote buyer; he equalizes gross positions because the probability density functions are unimodal and the marginal value of a bribe should be the same across all bribed legislators. 
+This has the feel of Groseclose and Snyder (1996) and Banks (2000) but the logic is different. There, gross ideal points are equalized so that there is no wasted expenditure, as the second mover would ignore whichever voter was most expensive to him. Remember that these results are in the context of only one lobby buying votes: it equalizes the legislators' gross positions because the probability density functions are unimodal and the marginal value of a bribe should be the same across all bribed legislators. 
 
 \begin{proposition}
   When Vote Buyer $B$ pays bribes to exactly one legislator, it may be any one of the three legislators depending on the bias parameter $\al$.
 	\label{prop:1NNB}
 \end{proposition}
-In contrast to models with no uncertainty about legislators' ideological positions, here we have an anti-result that the vote buyers do not necessarily bribe those who are ideologically most aligned with themselves. The non-negativity constraint often rules out bribing the most friendly legislator(s) because she/they don't contribute very much to the overall probability of winning the issue.
+In contrast to models with no uncertainty about legislators' ideological positions, here we have an anti-result that the vote buyers do not necessarily bribe those who are ideologically most aligned with themselves. The non-negativity constraint often rules out bribing the most friendly legislator(s) because she/they don't contribute very much to the overall probability of winning the issue. In fact, if it were possible, the vote buyer would often like to be paid by the most friendly legislator in exchange for her moving away from his position; that is, the most friendly legislator is often well past the point of optimality were the vote buyer to pay a bribe.
 
 Figure~\ref{fig:br} shows an example of a vote in which the most money went to the ideologically moderate--not the most extreme in a `leveling' strategy.
-
-
-
-\begin{itemize}
-			\item Note the non-negativity constraint means you can't extract money from a legislator who is past the FOC point in order to reallocate to another legislator
-			\item Some legislators who are past FOC point will not be lobbied		
-
-\end{itemize}
-
 
 
 \subsection{Intuition}
@@ -321,6 +312,8 @@ Numerical example. Take $\al=0$ and ignore A. Take $s_{-.5}$ from 1 to 2. $B$ st
 		\end{itemize}
 		
 \subsection{Two Vote Buyers}		
+Now we consider the entire game.
+
 Uncertainty buys us a lot: no longer this knife edge condition of $A$ pushing to the point that $B$ buys no votes
 		
 		\vskip.5in
