add bookmarks for appendix and references

--- a/draft.tex
+++ b/draft.tex
@@ -389,6 +389,7 @@ We will use descriptive analysis as well as both standard parametric and non-par
 
 \section*{Appendix}
 \label{sec:app}
+\pdfbookmark{Appendix}{sec:appendix}
 \noindent \textbf{\hypertarget{Pr_2NNB}{Proof of Proposition~\ref{prop:2NNB}}}: \\
 Without loss of generality, assume that it is the legislators at $-\frac{1}{2}$ and $0$ that are bribed. The first order conditions with respect to the bribes for these two legislators are
 	\begin{equation}
@@ -466,6 +467,7 @@ When Vote Buyer B bribes just one legislator, two non-negativity constraints are
 
 \newpage
 \section*{References}
+\pdfbookmark{References}{sec:refs}
 
 \begin{list}{}{\setlength{\leftmargin}{0.3in}\setlength{\rightmargin}{0.0in}\setlength{\itemindent}{-0.3in}\setlength{\itemsep}{0.0in}}
 
