--- a/draft.tex
+++ b/draft.tex
@@ -9,7 +9,7 @@
 \setlength{\footskip}{.375in}
 \renewcommand{\baselinestretch}{1.0}
 \renewcommand{\thesection}{\Roman{section}} 
-\renewcommand{\thesubsection}{\thesection.\Roman{subsection}}
+\renewcommand{\thesubsection}{\thesection.\Alph{subsection}}
 \linespread{1.5}
 
 \usepackage[pdftex,
