add sentence on multiple equilibria at top of sec:res

--- a/draft.tex
+++ b/draft.tex
@@ -225,7 +225,10 @@ Now, how does the probability that the legislator at $-0.5$ (the one who is most
 \section{Theoretical Results}
 \label{sec:res}
 
-Although uncertainty is present in the environment under consideration here, information about that uncertainty is symmetric. Therefore the appropriate equilibrium notion is subgame perfect Nash equilibrium.
+Although uncertainty is present in the environment under consideration here, information about that uncertainty is symmetric. Therefore the the solution concept employed here is subgame perfect Nash equilibrium.
+
+Whenever there is a possibility of multiple equilibria, I will focus on the one that maximizes the welfare of Vote Buyer A, the first mover.
+
 
 \subsection{Vote Buyer B}
 \label{sec:resB}
