improve sec:resB, add prop:0NNB

--- a/draft.tex
+++ b/draft.tex
@@ -233,25 +233,25 @@ Whenever there is a possibility of multiple equilibria, I will focus on the one 
 \subsection{Vote Buyer B}
 \label{sec:resB}
 
-I begin by examining the subgame that begins when Vote Buyer $B$ makes his offer. This not only serves to elucidate the basic logic of the model; it will also serve as a baseline from which to examine the incentives of Vote Buyer $A$. For now, assume that the uncertainty about ideal points is the same across legislators.
+I begin by examining the subgame that begins when Vote Buyer $B$ makes his offer. This not only serves to elucidate the basic logic of the model; it will also serve as a baseline from which to examine the incentives of Vote Buyer $A$. These results also represent the outcomes when $A$'s willingness to pay is low, in which case it refrains from lobbying altogether and $B$'s incentives are the same as if Vote Buyer $A$ did not exist. For now, assume that the uncertainty about ideal points is the same across legislators.
 
 In a legislature with three voters, Vote Buyer $B$ can choose to bribe all three legislators, two, one or none of the legislators. It is most instructive to begin with the case where he bribes two of the legislators.
 
 \begin{proposition}
-  When Vote Buyer $B$ pays bribes to exactly two legislators, the bribes are such that the two bribed legislators' ideal points gross of bribes are equalized. Which two voters are bribed depends on the bias parameter $\al$.
+  When Vote Buyer $B$ pays bribes to exactly two legislators, the bribes are such that the two bribed legislators' ideal points gross of bribes are equalized. Which two legislators are bribed depends on the bias parameter $\al$.
 	\label{prop:2NNB}
 \end{proposition}
 
 All proofs are in the Appendix.
 
-The first part of this result is similar in spirit to Groseclose and Snyder (1996) and Banks (2000) in that a `leveling' strategy is employed. But the non-negativity constraint here binds for the third, and which legislator is this third, un-bribed legislator depends on where the three ideal points are relative to the zero point at which a legislator has a 50$\%$ probability of voting for either the status quo or the new proposal. If $B$'s willingness to pay parameter increases, the non-negativity constraint becomes less binding. That is, when Vote Buyer $B$'s willingness to pay becomes high enough, the additional probability of winning gained by bribing the third legislator becomes worth the additional cost. When this happens, he finds himself in the following case.
+The first part of this result is similar in spirit to Groseclose and Snyder (1996) and Banks (2000) in that a `leveling' strategy is employed. But the non-negativity constraint here binds for the third, and which legislator is this third, un-bribed legislator depends on where the three ideal points are relative to the zero point at which a legislator has a 50$\%$ probability of voting for either the status quo or the new proposal. If $B$'s willingness-to-pay parameter increases, the non-negativity constraint becomes less binding. That is, when Vote Buyer $B$'s willingness to pay becomes high enough, the additional probability of winning gained by bribing the third legislator becomes worth the additional cost. When this happens, he finds himself in the following case.
 
 \begin{proposition}
   When Vote Buyer $B$ pays bribes to all three legislators, the bribes are such that the legislators' ideal points gross of bribes are equalized.
 	\label{prop:3NNB}
 \end{proposition}
 
-This has the feel of Groseclose and Snyder (1996) and Banks (2000) but the logic is different. There, gross ideal points are equalized so that there is no wasted expenditure, as the second mover would ignore whichever voter was most expensive to him. Remember that these results are in the context of only one lobby buying votes: it equalizes the legislators' gross positions because the probability density functions are unimodal and the marginal value of a bribe should be the same across all bribed legislators. If the ideal points are very close, it would not be optimal to continue moving one legislator and leave the other behind because the marginal increase will be greater for whichever legislator's ideal point is to the left once both have achieved a gross position greater than zero.
+This has the feel of Groseclose and Snyder (1996) and Banks (2000) but the logic is different. There, gross ideal points are equalized so that there is no wasted expenditure, as the second mover would ignore whichever voter was most expensive to him. In contrast, these results are in the context of only one lobby buying votes: it equalizes the legislators' gross positions because the probability density functions are unimodal and the marginal value of a bribe should be the same across all bribed legislators. If the ideal points are very close, it would be sub-optimal to continue moving one legislator and leave the other behind: the marginal increase would be greater for whichever legislator's ideal point is to the left once both have achieved a gross position greater than zero.
 
 
 \begin{proposition}
@@ -261,6 +261,15 @@ This has the feel of Groseclose and Snyder (1996) and Banks (2000) but the logic
 In contrast to models with no uncertainty about legislators' ideological positions, here we have an anti-result that the vote buyers do not necessarily bribe those who are ideologically most aligned with themselves. The non-negativity constraint often rules out bribing the most friendly legislator(s) because she/they don't contribute very much to the overall probability of winning the issue. In fact, if it were possible, the vote buyer would often like to be paid by the most friendly legislator in exchange for her moving away from his position; that is, the most friendly legislator is often well past the point of optimality were the vote buyer to pay a bribe.
 
 Figure~\ref{fig:br} shows an example of a vote in which the most money went to the ideologically moderate--not the most extreme in a `leveling' strategy.
+
+Finally, for completeness we state a somewhat obvious result concerning the final possible case:
+
+\begin{proposition}
+  When Vote Buyer $B$ has a low willingness to pay, he does not bribe any legislator.
+	\label{prop:0NNB}
+\end{proposition}
+
+When $W_B$ is low enough, the non-negativity constraint binds for all three legislators and Vote Buyer $B$ finds it in his interest to take his chances with the ideal point distributions as they stand.
 
 
 \subsection{Varying Uncertainty across Legislators}
